--- a/application-prod.yml
+++ b/application-prod.yml
@@ -1,1 +1,11 @@
-
+spring:
+  application:
+    name: config-prod
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
